TownyCultures 2.0.0 (#38)
* TownyCultures 2.0.0

Use TownyCommandAddonAPI.
- /town set culture
- /ta culture
- /ta reload townycultures

Refactor basically everything. Remove unneeded classes.

TODO: Maybe restore Messaging class usage...

* More changes, re-introduce Messaging class usage.